# event-horizon

./: .gitignore  README.md  app.py  pyproject.toml  run.py
events/: __init__.py  base.py  lights.py
src/event_horizon/: app.py  event_horizon_repl.py  event_repository.py  event_store.py
src/event_horizon/aggregates/: __init__.py  base_aggregate.py  binary_device_aggregate.py  door_aggregate.py  light_aggregate.py
src/event_horizon/commands/: __init__.py  base_command.py  door_commands.py  light_commands.py
src/event_horizon/domain/: __init__.py  event_store.py
src/event_horizon/events/: __init__.py  base.py  base_event.py  deserialization.py  door_events.py  light_events.py
src/event_horizon/handlers/: __init__.py  door_handler.py  light_handler.py
src/event_horizon/persistence/: __init__.py  event_repository.py
tests/aggregates/: test_door_aggregate.py  test_light_aggregate.py
tests/domain/: test_event_store.py
tests/events/: test_deserialization.py  test_door_events.py  test_light_events.py
tests/handlers/: test_door_handler.py  test_light_handler.py
tests/persistence/: test_event_repository.py
