[project]
name = "event-horizon"
version = "0.1.0"
description = "Event-sourced home automation backend"
readme = "README.md"
authors = [
    { name = "Jack Heywood" },
]
requires-python = "<4.0,>=3.12"
dependencies = []

[dependency-groups]
dev = [
    "freezegun>=1.5.2",
    "pytest<9.0.0,>=8.4.1",
]
